--- a/src/app/components/side-navbar/side-navbar.component.html
+++ b/src/app/components/side-navbar/side-navbar.component.html
@@ -6,5 +6,8 @@
     <li>
       <a routerLink="/create" routerLinkActive="active">Create</a>
     </li>
+    <li>
+      <a routerLink="/edit" routerLinkActive="active">Modify</a>
+    </li>
   </ul>
 </nav>
