refactor/ngrx state - read

--- a/src/app/components/side-navbar/side-navbar.component.html
+++ b/src/app/components/side-navbar/side-navbar.component.html
@@ -9,5 +9,8 @@
     <li>
       <a routerLink="/edit" routerLinkActive="active">Modify</a>
     </li>
+    <li>
+      <a routerLink="/state-test" routerLinkActive="active">State Test</a>
+    </li>
   </ul>
 </nav>
