--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -3,17 +3,18 @@
 }
 
 .example-card {
-  width: 300px;
+  width: 200px;
 }
 
 img {
-  height: 400px;
+  height: 300px;
   width: 100%;
   object-fit: cover;
 }
 
 .card-title {
-  width: 270px;
+  width: 175px;
+  font-size: 1rem;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
