--- a/src/app/views/listing/listing.component.html
+++ b/src/app/views/listing/listing.component.html
@@ -1,8 +1,3 @@
-<!-- <p>listing works!</p>
-<input type="text" placeholder="adawds"  [(ngModel)]="name">
-{{name}}
-
- -->
 <div class="section">
-  <app-card *ngFor="let cartoon of cartoons" [cartoon]="cartoon"></app-card>
+  <app-card *ngFor="let cartoon of cartoons$ | async" [cartoon]="cartoon"></app-card>
 </div>
